6_bison_uvod/kompleksni_brojevi/parser.output
Grammar

    0 $accept: program $end

    1 program: naredba program
    2        | naredba

    3 naredba: DEF_T ID ';'
    4        | DEF_T ID '=' izraz ';'
    5        | ID '=' izraz ';'
    6        | PRINT_T '(' izraz ')' ';'
    7        | logicka_naredba ';'

    8 logicka_naredba: izraz EQ izraz
    9                | izraz NEQ izraz

   10 izraz: izraz '+' izraz
   11      | izraz '*' izraz
   12      | izraz '-' izraz
   13      | izraz '/' izraz
   14      | '(' izraz ')'
   15      | '-' izraz
   16      | '~' izraz
   17      | ID
   18      | BROJ
   19      | kompleksni_broj
   20      | RE_T '(' izraz ')'
   21      | IM_T '(' izraz ')'
   22      | ARG_T '(' izraz ')'
   23      | MOD_T '(' izraz ')'

   24 kompleksni_broj: '<' broj ',' broj '>'
   25                | '<' broj '>'

   26 broj: BROJ
   27     | '-' BROJ


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 6 14 20 21 22 23
    ')' (41) 6 14 20 21 22 23
    '*' (42) 11
    '+' (43) 10
    ',' (44) 24
    '-' (45) 12 15 27
    '/' (47) 13
    ';' (59) 3 4 5 6 7
    '<' (60) 24 25
    '=' (61) 4 5
    '>' (62) 24 25
    '~' (126) 16
    error (256)
    UMINUS (258)
    DEF_T (259) 3 4
    PRINT_T (260) 6
    EQ (261) 8
    NEQ (262) 9
    ARG_T (263) 22
    MOD_T (264) 23
    RE_T (265) 20
    IM_T (266) 21
    BROJ <v> (267) 18 26 27
    ID <s> (268) 3 4 5 17


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    program (27)
        on left: 1 2
        on right: 0 1
    naredba (28)
        on left: 3 4 5 6 7
        on right: 1 2
    logicka_naredba <b> (29)
        on left: 8 9
        on right: 7
    izraz <kb> (30)
        on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23
        on right: 4 5 6 8 9 10 11 12 13 14 15 16 20 21 22 23
    kompleksni_broj <kb> (31)
        on left: 24 25
        on right: 19
    broj <v> (32)
        on left: 26 27
        on right: 24 25


State 0

    0 $accept: • program $end

    '-'      shift, and go to state 1
    '~'      shift, and go to state 2
    DEF_T    shift, and go to state 3
    PRINT_T  shift, and go to state 4
    ARG_T    shift, and go to state 5
    MOD_T    shift, and go to state 6
    RE_T     shift, and go to state 7
    IM_T     shift, and go to state 8
    BROJ     shift, and go to state 9
    ID       shift, and go to state 10
    '('      shift, and go to state 11
    '<'      shift, and go to state 12

    program          go to state 13
    naredba          go to state 14
    logicka_naredba  go to state 15
    izraz            go to state 16
    kompleksni_broj  go to state 17


State 1

   15 izraz: '-' • izraz

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 19
    kompleksni_broj  go to state 17


State 2

   16 izraz: '~' • izraz

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 20
    kompleksni_broj  go to state 17


State 3

    3 naredba: DEF_T • ID ';'
    4        | DEF_T • ID '=' izraz ';'

    ID  shift, and go to state 21


State 4

    6 naredba: PRINT_T • '(' izraz ')' ';'

    '('  shift, and go to state 22


State 5

   22 izraz: ARG_T • '(' izraz ')'

    '('  shift, and go to state 23


State 6

   23 izraz: MOD_T • '(' izraz ')'

    '('  shift, and go to state 24


State 7

   20 izraz: RE_T • '(' izraz ')'

    '('  shift, and go to state 25


State 8

   21 izraz: IM_T • '(' izraz ')'

    '('  shift, and go to state 26


State 9

   18 izraz: BROJ •

    $default  reduce using rule 18 (izraz)


State 10

    5 naredba: ID • '=' izraz ';'
   17 izraz: ID •

    '='  shift, and go to state 27

    $default  reduce using rule 17 (izraz)


State 11

   14 izraz: '(' • izraz ')'

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 28
    kompleksni_broj  go to state 17


State 12

   24 kompleksni_broj: '<' • broj ',' broj '>'
   25                | '<' • broj '>'

    '-'   shift, and go to state 29
    BROJ  shift, and go to state 30

    broj  go to state 31


State 13

    0 $accept: program • $end

    $end  shift, and go to state 32


State 14

    1 program: naredba • program
    2        | naredba •

    '-'      shift, and go to state 1
    '~'      shift, and go to state 2
    DEF_T    shift, and go to state 3
    PRINT_T  shift, and go to state 4
    ARG_T    shift, and go to state 5
    MOD_T    shift, and go to state 6
    RE_T     shift, and go to state 7
    IM_T     shift, and go to state 8
    BROJ     shift, and go to state 9
    ID       shift, and go to state 10
    '('      shift, and go to state 11
    '<'      shift, and go to state 12

    $default  reduce using rule 2 (program)

    program          go to state 33
    naredba          go to state 14
    logicka_naredba  go to state 15
    izraz            go to state 16
    kompleksni_broj  go to state 17


State 15

    7 naredba: logicka_naredba • ';'

    ';'  shift, and go to state 34


State 16

    8 logicka_naredba: izraz • EQ izraz
    9                | izraz • NEQ izraz
   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38
    EQ   shift, and go to state 39
    NEQ  shift, and go to state 40


State 17

   19 izraz: kompleksni_broj •

    $default  reduce using rule 19 (izraz)


State 18

   17 izraz: ID •

    $default  reduce using rule 17 (izraz)


State 19

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz
   15      | '-' izraz •

    $default  reduce using rule 15 (izraz)


State 20

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz
   16      | '~' izraz •

    $default  reduce using rule 16 (izraz)


State 21

    3 naredba: DEF_T ID • ';'
    4        | DEF_T ID • '=' izraz ';'

    ';'  shift, and go to state 41
    '='  shift, and go to state 42


State 22

    6 naredba: PRINT_T '(' • izraz ')' ';'

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 43
    kompleksni_broj  go to state 17


State 23

   22 izraz: ARG_T '(' • izraz ')'

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 44
    kompleksni_broj  go to state 17


State 24

   23 izraz: MOD_T '(' • izraz ')'

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 45
    kompleksni_broj  go to state 17


State 25

   20 izraz: RE_T '(' • izraz ')'

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 46
    kompleksni_broj  go to state 17


State 26

   21 izraz: IM_T '(' • izraz ')'

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 47
    kompleksni_broj  go to state 17


State 27

    5 naredba: ID '=' • izraz ';'

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 48
    kompleksni_broj  go to state 17


State 28

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz
   14      | '(' izraz • ')'

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38
    ')'  shift, and go to state 49


State 29

   27 broj: '-' • BROJ

    BROJ  shift, and go to state 50


State 30

   26 broj: BROJ •

    $default  reduce using rule 26 (broj)


State 31

   24 kompleksni_broj: '<' broj • ',' broj '>'
   25                | '<' broj • '>'

    ','  shift, and go to state 51
    '>'  shift, and go to state 52


State 32

    0 $accept: program $end •

    $default  accept


State 33

    1 program: naredba program •

    $default  reduce using rule 1 (program)


State 34

    7 naredba: logicka_naredba ';' •

    $default  reduce using rule 7 (naredba)


State 35

   10 izraz: izraz '+' • izraz

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 53
    kompleksni_broj  go to state 17


State 36

   12 izraz: izraz '-' • izraz

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 54
    kompleksni_broj  go to state 17


State 37

   11 izraz: izraz '*' • izraz

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 55
    kompleksni_broj  go to state 17


State 38

   13 izraz: izraz '/' • izraz

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 56
    kompleksni_broj  go to state 17


State 39

    8 logicka_naredba: izraz EQ • izraz

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 57
    kompleksni_broj  go to state 17


State 40

    9 logicka_naredba: izraz NEQ • izraz

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 58
    kompleksni_broj  go to state 17


State 41

    3 naredba: DEF_T ID ';' •

    $default  reduce using rule 3 (naredba)


State 42

    4 naredba: DEF_T ID '=' • izraz ';'

    '-'    shift, and go to state 1
    '~'    shift, and go to state 2
    ARG_T  shift, and go to state 5
    MOD_T  shift, and go to state 6
    RE_T   shift, and go to state 7
    IM_T   shift, and go to state 8
    BROJ   shift, and go to state 9
    ID     shift, and go to state 18
    '('    shift, and go to state 11
    '<'    shift, and go to state 12

    izraz            go to state 59
    kompleksni_broj  go to state 17


State 43

    6 naredba: PRINT_T '(' izraz • ')' ';'
   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38
    ')'  shift, and go to state 60


State 44

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz
   22      | ARG_T '(' izraz • ')'

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38
    ')'  shift, and go to state 61


State 45

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz
   23      | MOD_T '(' izraz • ')'

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38
    ')'  shift, and go to state 62


State 46

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz
   20      | RE_T '(' izraz • ')'

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38
    ')'  shift, and go to state 63


State 47

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz
   21      | IM_T '(' izraz • ')'

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38
    ')'  shift, and go to state 64


State 48

    5 naredba: ID '=' izraz • ';'
   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38
    ';'  shift, and go to state 65


State 49

   14 izraz: '(' izraz ')' •

    $default  reduce using rule 14 (izraz)


State 50

   27 broj: '-' BROJ •

    $default  reduce using rule 27 (broj)


State 51

   24 kompleksni_broj: '<' broj ',' • broj '>'

    '-'   shift, and go to state 29
    BROJ  shift, and go to state 30

    broj  go to state 66


State 52

   25 kompleksni_broj: '<' broj '>' •

    $default  reduce using rule 25 (kompleksni_broj)


State 53

   10 izraz: izraz • '+' izraz
   10      | izraz '+' izraz •
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz

    '*'  shift, and go to state 37
    '/'  shift, and go to state 38

    $default  reduce using rule 10 (izraz)


State 54

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   12      | izraz '-' izraz •
   13      | izraz • '/' izraz

    '*'  shift, and go to state 37
    '/'  shift, and go to state 38

    $default  reduce using rule 12 (izraz)


State 55

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   11      | izraz '*' izraz •
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz

    $default  reduce using rule 11 (izraz)


State 56

   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz
   13      | izraz '/' izraz •

    $default  reduce using rule 13 (izraz)


State 57

    8 logicka_naredba: izraz EQ izraz •
   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38

    $default  reduce using rule 8 (logicka_naredba)


State 58

    9 logicka_naredba: izraz NEQ izraz •
   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38

    $default  reduce using rule 9 (logicka_naredba)


State 59

    4 naredba: DEF_T ID '=' izraz • ';'
   10 izraz: izraz • '+' izraz
   11      | izraz • '*' izraz
   12      | izraz • '-' izraz
   13      | izraz • '/' izraz

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '*'  shift, and go to state 37
    '/'  shift, and go to state 38
    ';'  shift, and go to state 67


State 60

    6 naredba: PRINT_T '(' izraz ')' • ';'

    ';'  shift, and go to state 68


State 61

   22 izraz: ARG_T '(' izraz ')' •

    $default  reduce using rule 22 (izraz)


State 62

   23 izraz: MOD_T '(' izraz ')' •

    $default  reduce using rule 23 (izraz)


State 63

   20 izraz: RE_T '(' izraz ')' •

    $default  reduce using rule 20 (izraz)


State 64

   21 izraz: IM_T '(' izraz ')' •

    $default  reduce using rule 21 (izraz)


State 65

    5 naredba: ID '=' izraz ';' •

    $default  reduce using rule 5 (naredba)


State 66

   24 kompleksni_broj: '<' broj ',' broj • '>'

    '>'  shift, and go to state 69


State 67

    4 naredba: DEF_T ID '=' izraz ';' •

    $default  reduce using rule 4 (naredba)


State 68

    6 naredba: PRINT_T '(' izraz ')' ';' •

    $default  reduce using rule 6 (naredba)


State 69

   24 kompleksni_broj: '<' broj ',' broj '>' •

    $default  reduce using rule 24 (kompleksni_broj)
